komga-ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: komga
  annotations:
    linkerd.io/inject: enabled
