komga-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: komga
  labels:
    app: komga
    part-of: komga
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: true
spec:
  replicas: 1
  selector:
    matchLabels:
      app: komga
      part-of: komga
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: komga
        part-of: komga
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: node-role.kubernetes.io/worker
                operator: Exists
      containers:
      - name: komga
        image: gotson/komga:0.147.0
        ports:
        - name: komga
          containerPort: 8080
        volumeMounts:
        - name: komga
          mountPath: /config
        - name: mangas
          mountPath: /mangas
        readinessProbe:
          httpGet:
            path: /
            port: komga
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: komga
          initialDelaySeconds: 25
          periodSeconds: 20
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 740Mi
      volumes:
      - name: komga
        persistentVolumeClaim:
          claimName: komga
      - name: mangas
        persistentVolumeClaim:
          claimName: mangas
