komga-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: komga
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: komga
  selector:
    app: komga
    part-of: komga
